Fixing Spacing

--- a/src/scss/Buttons.scss
+++ b/src/scss/Buttons.scss
@@ -14,6 +14,8 @@
 .btn {
   padding: 10px 20px;
   min-width: max-content;
+  cursor: pointer;
+  user-select: none;
 }
 
 .btn-br {
@@ -29,6 +31,7 @@
   background-color: #f62323;
   color: #FFF;
 }
+
 .btn-blue {
   background-color: #0c77e2;
   color: #FFF;
@@ -38,6 +41,7 @@
   background-color: #2c9631;
   color: #FFF;
 }
+
 .btn-orange {
   background-color: #ed861e;
   color: #FFF;
